<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:paddingBottom="100dp">


    <TextView
        android:id="@+id/tv_movie_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/poster_movie"
        tools:ignore="RtlSymmetry"
        tools:text="Kimetsu No yaiba - The Movie: Mugen Traine" />

    <TextView
        android:id="@+id/tv_title_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/overview_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster_movie" />

    <TextView
        android:id="@+id/tv_info_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_star_24"
        app:layout_constraintStart_toEndOf="@+id/poster_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title"
        tools:text="7.6" />

    <TextView
        android:id="@+id/tv_overview_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_overview"
        app:layout_constraintVertical_bias="0.041"
        tools:text="textView" />

    <ImageView
        android:id="@+id/poster_movie"
        android:layout_width="168dp"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_overview"
        app:layout_constraintEnd_toStartOf="@+id/tv_movie_detail_title"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:srcCompat="@drawable/placeholder_movie" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="176dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:indeterminateTint="@color/blue_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addToFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:tint="@color/blue_200"
        android:contentDescription="@string/title_nav_favorite"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/poster_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/poster_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_movie"
        app:layout_constraintVertical_bias="0.792"
        app:srcCompat="@drawable/ic_baseline_favorite_border_blue_24" />

</androidx.constraintlayout.widget.ConstraintLayout>