<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv_shows_favorite"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        tools:listitem="@layout/movie_item_fav"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <include
        android:id="@+id/notify_layout_tv_shows"
        layout="@layout/layout_empty_tvshows_fav" />
</androidx.constraintlayout.widget.ConstraintLayout>